# market_tools

./: .gitignore  README.md  index.html  package-lock.json  package.json  server.js  vite.config.js
.github/workflows/: build-macos.yml
src/: main.js  registry.js  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/apps/: yahooStock.js
